# nu_plugin_periodic_table

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: extensions.rs  lib.rs  main.rs  periodic_table.rs  periodic_table_grid.rs
src/nu/: mod.rs
