[package]
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
description = "A periodic table of elements plugin for Nushell"
edition = "2021"
license = "GPL-3.0-only"
name = "nu_plugin_periodic_table"
repository = "https://github.com/JosephTLyons/nu_plugin_periodic_table"
version = "0.2.9"

[dependencies]
nu-ansi-term = "0.50.1"
nu-plugin = "0.97.1"
nu-protocol = "0.97.1"
periodic-table-on-an-enum = "0.3.2"
